<?xml version="1.0" encoding="utf-8"?>
<!-- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" -->
<!--     android:layout_width="match_parent" -->
<!--     android:layout_height="match_parent" -->
<!--     android:background="#333333" -->
<!--     android:orientation="vertical" > -->

<!--     <TextView  -->
<!--         android:id="@+id/logo1_paycar" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_marginLeft="40sp" -->
<!--         android:text="@string/logo2" -->
<!--         android:textSize="20sp" -->
<!--         android:textColor="@color/white"/> -->
    
<!--     <TextView  -->
<!--         android:id="@+id/paycarsaomadanhao" -->
<!--         android:layout_width="300dp" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_marginLeft="20dp" -->
<!--         android:layout_marginTop="80dp" -->
<!--         android:text="@string/defaultdanhao" -->
<!--         android:textColor="#fff444" -->
<!--         android:textSize="25sp"/> -->
<!--     <RelativeLayout  -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_marginTop="100dp"> -->
<!--         <Button  -->
<!--             android:id="@+id/failbtn" -->
<!--             android:layout_width="100dp" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:layout_alignParentLeft="true" -->
<!--             android:text="@string/failbtn" -->
<!--             android:textSize="20sp" -->
<!--             android:textColor="#ffffff" -->
<!--             android:background="@color/blue"/> -->

<!--         <Button -->
<!--             android:id="@+id/succbtn" -->
<!--             android:layout_width="100dp" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:layout_alignParentRight="true" -->
<!--             android:layout_alignParentTop="true" -->
<!--             android:text="@string/succbtn" -->
<!--             android:textSize="20sp" -->
<!--             android:textColor="#ffffff" -->
<!--             android:background="@color/blue" /> -->
        
<!--     </RelativeLayout> -->
    
<!-- </LinearLayout> -->


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/maintheme" >
    
    
    <TextView 
        android:id="@+id/logo2_paycar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40sp"
        android:text="@string/logo1"
        android:textSize="20sp"
        android:textColor="@color/white"/>
    
    <TextView 
        android:id="@+id/paycarsaomadanhao1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignLeft="@+id/logo2_paycar"
        android:layout_below="@+id/logo2_paycar"
        android:text="单号：545637389"
        android:textColor="@color/white"
        android:textSize="20sp"/>
    
    
     <Button 
        android:id="@+id/succbtn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:layout_below="@+id/paycarsaomadanhao1"
        android:layout_centerHorizontal="true"
        android:background="@color/bc_main1"
        android:textColor="@color/white"
        android:text="@string/succbtn"/>
    
     <Button 
        android:id="@+id/failbtn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/succbtn"
        android:layout_centerHorizontal="true"
        android:background="@color/bc_main1"
        android:textColor="@color/white"
        android:text="@string/failbtn"/>
    
     <Button 
        android:id="@+id/cancle_paycar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/failbtn"
        android:layout_centerHorizontal="true"
        android:background="@color/bc_main1"
        android:textColor="@color/white"
        android:text="@string/cancle"/>
    

</RelativeLayout>
